# Programming

khapilov_a_o/: 0004a.cpp  0017a.cpp  0136a.cpp  0136b.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0485a.cpp  0499a.cpp  0577a.cpp  0579a.cpp  0617a.cpp  0879b.cpp  0886b.cpp  0915a.cpp  0935b.cpp  0978a.cpp  1017a.cpp  1057a.cpp  1165b.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1512c.cpp  1559a.cpp  1585a.cpp  1649a.cpp  1669d.cpp  1670b.cpp  1671a.cpp  1675c.cpp  1678a.cpp  1690d.cpp  1692c.cpp  1699b.cpp  1701a.cpp  1703c.cpp  1717b.cpp  1721.cpp  1729a.cpp  (+23 more)
khapilov_a_o/Rational/: CMakeLists.txt  rational.cpp  rational.h  testRat.cpp
khapilov_a_o/RationalProject/: CMakeLists.txt  rational.doctest.cpp
khapilov_a_o/RationalProject/rational/: CMakeLists.txt  rational.cpp  rational.h  rational.hpp
